# libbittranspose

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
benchmark/: bench_rectangular_transpose.cpp  bench_square_transpose.cpp
include/: bit_transpose.h
src/: bit_transpose_extra_avx2.h  transpose_rectangular_avx2.c  transpose_rectangular_plain.c  transpose_square_avx2.c  transpose_square_common.c  transpose_square_plain.c
test/: test_data.hpp  test_data_rectangular.cpp  test_data_square.cpp  test_rectangular_transpose.cpp  test_square_transpose.cpp
